examples/test/testpolicy4553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4553
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key9: value25
      key42: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
          key33: value13
      podSelector:
        matchLabels:
          key38: value44
